--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ header {
     padding: 10px 0;
     text-align: center;
     position: relative;
+    min-width: 600px;
 }
 
 header img {
@@ -44,7 +45,8 @@ nav a:hover {
 
 .container {
     width: 95%;
-    min-height: 500px;
+    /*min-height: 500px;*/
+    height: 100%;
     margin: 30px auto;
     background-color: #fff;
 }
@@ -101,4 +103,50 @@ nav a:hover {
     display: inline-block;
     font-size: 16px;
     transition: all 300ms ease-in-out;
+}
+
+/* Working with pop-up window */
+
+.article-container {
+    width: 95%;
+    /*min-height: 500px;*/
+    height: 100%;
+    margin: 30px auto;
+    background-color: #fff;
+}
+
+.popup {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+    z-index: 1;
+}
+
+.popup-content {
+    position: relative;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    width: 80%;
+    max-width: 600px;
+    background-color: white;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    cursor: pointer;
 }
