--- a/styles.css
+++ b/styles.css
@@ -116,19 +116,22 @@ nav a:hover {
 }
 
 .popup {
-    display: none; /* Hidden by default */
+    display: none;
+    /* Hidden by default */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Black background with opacity */
     z-index: 1;
 }
 
 .popup-content {
     position: relative;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
+    /* 15% from the top and centered */
     padding: 20px;
     width: 80%;
     max-width: 600px;
