Fixed dropdown menu

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     background-color: #f4f4f4;
 }
 
+/*Header Section*/
 header {
     background-color: #333;
     color: #fff;
@@ -16,54 +17,72 @@ header {
 
 header img {
     padding: 15px 15px;
-    /*position: absolute;
-            left: 20px;
-            top: 10px;*/
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
-nav {
-    display: flex;
-    height: 80px;
-    align-items: center;
-    justify-content: center;
-    background-color: #444;
+.div-header-title {
+    position: absolute;
+    padding-right: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-nav a {
-    color: #fff;
-    padding: 14px 20px;
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    right: 0;
+    position: absolute;
+    padding: 16px;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    left: -39px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 12px;
     text-decoration: none;
-    text-align: center;
+    display: block;
 }
 
-nav a:hover {
-    background-color: #555;
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #f1f1f1
 }
 
-.container {
-    width: 95%;
-    /*min-height: 500px;*/
-    height: 100%;
-    margin: 30px auto;
-    background-color: #fff;
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
-/*h1 {
-            padding-left: 120px;
-
-        }*/
-
-.about,
-.portfolio,
-.blog {
-    margin: 20px 0;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
+
+/*End header*/
 
 .footer {
     display: flex;
